# neural-network

./: .gitmodules  CMakeLists.txt
atpnn/: CMakeLists.txt
atpnn/include/ann/: ann.hpp  components.cpp  components.hpp  visualizer.cpp  visualizer.hpp
test/: CMakeLists.txt  main.cpp
